Add BoardCube generator //TODO Validate Add SecurityConfig Add GameRestController for generate board array Add GameConfiguration for game properties from yaml file Add cubes.txt with example data //TODO Create all different cubes